Validate findCompaniesByTags's begin and end
